# incremental-play

./: .ghci  .gitignore  .gitmodules  .hlint.yaml  ChangeLog.md  Makefile  README.md  cabal.project  incremental-play.cabal  notes.txt  repl.sh  stack.yaml
alex-templates/: AlexTemplate-ghc-debug  GenericTemplate.hs  IncrementalTemplate-ghc-debug
app/: Expr.array.ha  Expr.hs  Expr.y  ExprPrecedence.y  ExprSimple.hs  ExprSimple.y  ExprSimpleOrig.y  Main.hs  MainPrecedence.hs  MainRepetitive2.hs  MainRepetitive3.hs  MainWhitespace1.hs  Repetitive.y  Repetitive2.y  Simple.hs  Simple.y
data/: bar.inc  foo.inc
elisp/: lsp-inc.el
generated-parsers/: BasicLexer.hs  ExprPrecedence.hs  ExprSimple.hs  PaperExample-az.hs  PaperExample.hs  Repetitive.hs  Repetitive2.hs  Repetitive3.hs  Whitespace1.hs
happy-templates/: GenericTemplate.hs
parsers/: BasicLexer.x  ExprSimple.y  PaperExample.x  Repetitive.hs  Repetitive2.y  Repetitive3.y  Simple.y  Whitespace1.y
src/Language/Incremental/: LSP.hs  Lexer.hs  LexerTypes.hs  ParserTypes.hs  Types.hs  Versioned.hs  Versioning.hs  Visualise.hs
test/: LexerSpec.hs  Main.hs  Spec.hs  VersionedSpec.hs  VisualiseSpec.hs
