name:                incremental-play
version:             0.1.0.0
synopsis:            Playing with incremental parsing
-- description:         
homepage:            https://github.com/alanz/incremental-play
license:             GPL-3
license-file:        LICENSE
author:              Alan Zimmerman
maintainer:          alan.zimm@gmail.com
-- copyright:           
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=2.0

library
  hs-source-dirs:      src generated-parsers
  exposed-modules:     Language.Incremental.LSP
                       Language.Incremental.Visualise
                       Language.Incremental.Lexer
                       Language.Incremental.LexerTypes
                       Language.Incremental.ParserTypes
                       Language.Incremental.Versioned
                       Language.Incremental.Versioning
  other-modules:       Repetitive2
                       Repetitive3
                       Whitespace1
                       PaperExample
                       BasicLexer
  build-depends:       base >=4.9 && <4.13
                     , ansi-wl-pprint
                     , array
                     , containers
                     , data-default
                     , fingertree
                     , haskell-lsp
                     , hslogger
                     , lens
                     , ListZipper
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , ordered-containers
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , protolude
                     , rosezipper
                     , stm
                     , text
                     , unix
                     , yi-rope
                     , zippers

  ghc-options:         -Wall -fwarn-tabs -fwarn-unused-imports -fwarn-missing-signatures -fwarn-name-shadowing -fwarn-incomplete-patterns
  default-language:    Haskell2010

executable incremental-play
  -- main-is:                Main.hs
  main-is:                MainWhitespace1.hs
  -- main-is:                MainRepetitive3.hs
  -- main-is:                PaperExample.hs
  -- main-is:                BasicLexer.hs
  -- Other-Modules:          Paths_HaRe
  -- other-modules:          Repetitive3
  ghc-options:            -Wall
  hs-source-dirs:
    ./app
    ./generated-parsers
  build-depends:       base >= 4.9  && < 4.13
                     , array
                     , containers
                     , incremental-play
                     , lens
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , zippers
  --                      ,  happy == 1.20.*
  -- build-tools:            happy == 1.20.*
  default-language:    Haskell2010

test-suite spec
  type:
      exitcode-stdio-1.0
  ghc-options:
      -Wall
  main-is:
      Main.hs
  hs-source-dirs:
    test
    src
    generated-parsers
  other-modules:       Spec
                       Language.Incremental.Lexer
                       Language.Incremental.LexerTypes
                       Language.Incremental.Versioned
                       LexerSpec
                       VersionedSpec
                       VisualiseSpec
                       Repetitive3
                       Whitespace1
  build-depends:       base        >= 4.9  && < 4.13
                     , ListZipper
                     , ansi-wl-pprint
                     , array
                     , containers
                     , data-default
                     , fingertree
                     , haskell-lsp
                     , hslogger
                     , hspec
                     , incremental-play
                     , lens
                     , megaparsec
                     , mtl
                     , optparse-applicative
                     , ordered-containers
                     , prettyprinter
                     , prettyprinter-ansi-terminal
                     , protolude
                     , rosezipper
                     , stm
                     , text
                     , unix
                     , zippers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alanz/incremental-play.git
